Fixes bug and includes Sequence() Class

--- a/analysis/data_log_data_to_sequence.ipynb
+++ b/analysis/data_log_data_to_sequence.ipynb
@@ -298,6 +298,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Making the sequence class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sequence():\n",
+    "    \n",
+    "#     actions = set()\n",
+    "#         actions.update(self.seq)\n",
+    "    \n",
+    "    def __init__(self,seq, sid=None, sim=None):\n",
+    "        self.seq = seq\n",
+    "        self.sid = sid\n",
+    "        self.sim = sim\n",
+    "        self.actions = set()\n",
+    "        self.update_actions()\n",
+    "        self.blocked_actions = []\n",
+    "        self.removed_actions = []\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return \"Sequence({0})\".format(','.join(self.seq))\n",
+    "    \n",
+    "    def update_actions(self):\n",
+    "        self.actions = set(self.seq)\n",
+    "    \n",
+    "    def extend(self,seq_to_add):\n",
+    "        self.seq = self.seq.extend(seq_to_add)\n",
+    "        self.update_actions()\n",
+    "        return self.seq\n",
+    "        \n",
+    "    def remove_action(self,action_to_remove):\n",
+    "        self.removed_actions.append(action_to_remove)\n",
+    "        self.seq = [s for s in self.seq if s!=action_to_remove]\n",
+    "        self.update_actions()\n",
+    "        return self.seq\n",
+    "     \n",
+    "    def block_action(self,actions_to_block=None):\n",
+    "        if actions_to_block == None:\n",
+    "            actions_to_block = self.actions\n",
+    "        self.blocked_actions.extend(actions_to_block)\n",
+    "        \n",
+    "        self.unblocked_seq = list(self.seq)\n",
+    "        self.seq = []\n",
+    "        for key,group in groupby(self.unblocked_seq):\n",
+    "            if key in actions_to_block:\n",
+    "                self.seq.append(key)\n",
+    "            else:\n",
+    "                self.seq.extend(list(group))\n",
+    "        return self.seq\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        print \"Length:{} actions, sid:{}, sim:{}, blocked actions:{}, actions removed: {}\".format(len(self.seq),self.sid,self.sim,self.blocked_actions, self.removed_actions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence(A,B,B,G,G,G,A,A,F)\n",
+      "['A', 'B', 'B', 'G', 'G', 'G', 'A', 'A']\n",
+      "['A', 'B', 'G', 'G', 'G', 'A']\n",
+      "Length:6 actions, sid:None, sim:None, blocked actions:['A', 'B'], actions removed: ['F']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Sequence(['A','B','B','G','G','G','A','A','F'])\n",
+    "print a\n",
+    "print a.remove_action('F')\n",
+    "print a.block_action(['A','B'])\n",
+    "a.parameters()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parsing both sims for all students"
    ]
   },
@@ -418,7 +504,7 @@
       "Student 24566161 has no state data so using special parser\n",
       "Student 77047160 has no state data so using special parser\n",
       "Student 82788161 has no state data so using special parser\n",
-      "Wall time: 4min 33s\n"
+      "Wall time: 5min 13s\n"
      ]
     }
    ],
@@ -434,7 +520,7 @@
     "    for student in ids:\n",
     "        files = log_files_per_sim[sim][student]\n",
     "        files.sort()\n",
-    "        seq = []\n",
+    "        seq = Sequence([],sid=student,sim=sim)\n",
     "        blocked_seq = []\n",
     "        timecoords = []\n",
     "        for f in files:\n",
@@ -454,10 +540,12 @@
     "                    print \"Lack of matches:\", df[df['Sequence Action']=='no_match_found']\n",
     "                    print \"NA events:\", df[df['Sequence Action'].isnull()].head(1)\n",
     "                    raise ValueError(\"some events were not parsed\")\n",
-    "            df = df[df['Sequence Action']!='ignore'] #remove ignorable actions\n",
+    "#             df = df[df['Sequence Action']!='ignore'] #remove ignorable actions\n",
+    "#             seq.extend(list(df['Sequence Action']))\n",
     "            seq.extend(list(df['Sequence Action']))\n",
-    "            df_blocked = df[(df['Sequence Action'].shift() != df['Sequence Action'])]\n",
-    "            blocked_seq.extend(list(df_blocked['Sequence Action']))\n",
+    "    \n",
+    "#             df_blocked = df[(df['Sequence Action'].shift() != df['Sequence Action'])]\n",
+    "            blocked_seq.extend(seq.blocked())\n",
     "            timecoords.extend(get_timecoords_blocked_actions(df_blocked))\n",
     "        all_seqs[sim][student] = seq\n",
     "        all_blocked_seqs[sim][student] = [x\n",
@@ -695,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -743,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
