Fixes bugs in class and runs sequence parser using Class

--- a/analysis/data_log_data_to_sequence.ipynb
+++ b/analysis/data_log_data_to_sequence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# About log_data_to_sequence\n",
+    "# About data_log_data_to_sequence\n",
     "\n",
     "This notebook creates minable sequences from log data given a predetermined translation of log actions to sequence actions."
    ]
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,8 +318,8 @@
     "        self.sim = sim\n",
     "        self.actions = set()\n",
     "        self.update_actions()\n",
-    "        self.blocked_actions = []\n",
-    "        self.removed_actions = []\n",
+    "        self.blocked_actions = set()\n",
+    "        self.removed_actions = set()\n",
     "\n",
     "    def __repr__(self):\n",
     "        return \"Sequence({0})\".format(','.join(self.seq))\n",
@@ -328,20 +328,29 @@
     "        self.actions = set(self.seq)\n",
     "    \n",
     "    def extend(self,seq_to_add):\n",
-    "        self.seq = self.seq.extend(seq_to_add)\n",
+    "        self.seq.extend(seq_to_add)\n",
     "        self.update_actions()\n",
-    "        return self.seq\n",
+    "        return self\n",
     "        \n",
-    "    def remove_action(self,action_to_remove):\n",
-    "        self.removed_actions.append(action_to_remove)\n",
-    "        self.seq = [s for s in self.seq if s!=action_to_remove]\n",
+    "    def remove_actions(self,actions_to_remove):\n",
+    "        '''Remove 1 action or multiple actions'''\n",
+    "        print '1',actions_to_remove\n",
+    "        if isinstance(actions_to_remove,basestring):\n",
+    "            print \"HERE\"\n",
+    "            actions_to_remove = [actions_to_remove]\n",
+    "            print '2', actions_to_remove\n",
+    "        self.removed_actions.update(actions_to_remove)\n",
+    "        self.seq = [s for s in self.seq if s not in actions_to_remove]\n",
     "        self.update_actions()\n",
-    "        return self.seq\n",
+    "        return self\n",
     "     \n",
-    "    def block_action(self,actions_to_block=None):\n",
+    "    def block_actions(self,actions_to_block=None):\n",
+    "        '''Block 1 or multiple actions'''\n",
     "        if actions_to_block == None:\n",
     "            actions_to_block = self.actions\n",
-    "        self.blocked_actions.extend(actions_to_block)\n",
+    "        elif isinstance(actions_to_block,basestring):\n",
+    "            actions_to_block = list(actions_to_block)\n",
+    "        self.blocked_actions.update(actions_to_block)\n",
     "        \n",
     "        self.unblocked_seq = list(self.seq)\n",
     "        self.seq = []\n",
@@ -350,7 +359,7 @@
     "                self.seq.append(key)\n",
     "            else:\n",
     "                self.seq.extend(list(group))\n",
-    "        return self.seq\n",
+    "        return self\n",
     "    \n",
     "    def parameters(self):\n",
     "        print \"Length:{} actions, sid:{}, sim:{}, blocked actions:{}, actions removed: {}\".format(len(self.seq),self.sid,self.sim,self.blocked_actions, self.removed_actions)"
@@ -358,25 +367,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sequence(A,B,B,G,G,G,A,A,F)\n",
-      "['A', 'B', 'B', 'G', 'G', 'G', 'A', 'A']\n",
-      "['A', 'B', 'G', 'G', 'G', 'A']\n",
-      "Length:6 actions, sid:None, sim:None, blocked actions:['A', 'B'], actions removed: ['F']\n"
+      "Sequence(A,B,B,G,F,G,G,A,A,F)\n",
+      "Sequence(A,B,B,G,F,G,G,A,A,F,A)\n",
+      "1 F\n",
+      "HERE\n",
+      "2 ['F']\n",
+      "Sequence(A,B,B,G,G,G,A,A,A)\n",
+      "Sequence(A,B,G,G,G,A)\n",
+      "Length:6 actions, sid:None, sim:None, blocked actions:set(['A', 'B']), actions removed: set(['F'])\n"
      ]
     }
    ],
    "source": [
-    "a = Sequence(['A','B','B','G','G','G','A','A','F'])\n",
+    "a = Sequence(['A','B','B','G','F','G','G','A','A','F'])\n",
     "print a\n",
-    "print a.remove_action('F')\n",
-    "print a.block_action(['A','B'])\n",
+    "print a.extend('A')\n",
+    "print a.remove_actions('F')\n",
+    "print a.block_actions(['A','B'])\n",
     "a.parameters()"
    ]
   },
@@ -389,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -454,43 +468,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Student 23836160 has no state data so using special parser\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sarah\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  after removing the cwd from sys.path.\n",
-      "C:\\Users\\Sarah\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n",
-      "C:\\Users\\Sarah\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  import sys\n",
-      "C:\\Users\\Sarah\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Student 23836160 has no state data so using special parser\n",
       "Student 41947147 has no state data so using special parser\n",
       "Student 11612162 has no state data so using special parser\n",
       "Student 64006159 has no state data so using special parser\n",
@@ -504,24 +482,19 @@
       "Student 24566161 has no state data so using special parser\n",
       "Student 77047160 has no state data so using special parser\n",
       "Student 82788161 has no state data so using special parser\n",
-      "Wall time: 5min 13s\n"
+      "Wall time: 4min 8s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "all_seqs = {}\n",
-    "all_blocked_seqs = {}\n",
-    "all_blocked_timecoords = {}\n",
     "for sim in ['capacitor','beers']:\n",
     "    all_seqs[sim] = {}\n",
-    "    all_blocked_seqs[sim] = {}\n",
-    "    all_blocked_timecoords[sim] = {}\n",
     "    for student in ids:\n",
     "        files = log_files_per_sim[sim][student]\n",
-    "        files.sort()\n",
+    "        files.sort() #sorts log by date and time\n",
     "        seq = Sequence([],sid=student,sim=sim)\n",
-    "        blocked_seq = []\n",
     "        timecoords = []\n",
     "        for f in files:\n",
     "            df = prep_parsing_data(f) #removes model events, adds pauses with threshold of 9s\n",
@@ -533,24 +506,14 @@
     "                if sim=='capacitor' and df['Charge'].isnull().values.any():\n",
     "                    print \"Student {0} has no state data so using special parser\".format(student)\n",
     "                    df['Sequence Action'] = df.apply(converter, args=([rules_as_dict[sim+'_without_state']]), axis=1)\n",
-    "                    \n",
     "                if df[df['Sequence Action']=='no_match_found'].empty and df['Sequence Action'].isnull().values.any() == False:\n",
     "                    pass\n",
     "                else:\n",
     "                    print \"Lack of matches:\", df[df['Sequence Action']=='no_match_found']\n",
     "                    print \"NA events:\", df[df['Sequence Action'].isnull()].head(1)\n",
     "                    raise ValueError(\"some events were not parsed\")\n",
-    "#             df = df[df['Sequence Action']!='ignore'] #remove ignorable actions\n",
-    "#             seq.extend(list(df['Sequence Action']))\n",
     "            seq.extend(list(df['Sequence Action']))\n",
-    "    \n",
-    "#             df_blocked = df[(df['Sequence Action'].shift() != df['Sequence Action'])]\n",
-    "            blocked_seq.extend(seq.blocked())\n",
-    "            timecoords.extend(get_timecoords_blocked_actions(df_blocked))\n",
-    "        all_seqs[sim][student] = seq\n",
-    "        all_blocked_seqs[sim][student] = [x\n",
-    "                                          [0] for x in groupby(seq)]\n",
-    "        all_blocked_timecoords[sim][student] = timecoords"
+    "        all_seqs[sim][student] = seq"
    ]
   },
   {
@@ -562,23 +525,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "#create files\n",
     "pickle_out_seqs = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_seqs.txt'),\"wb\")\n",
-    "pickle_out_blocked_seqs = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_blocked_seqs.txt'),\"wb\")\n",
-    "pickle_out_all_blocked_timecoords = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_blocked_timecoords.txt'),\"wb\")\n",
+    "# pickle_out_blocked_seqs = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_blocked_seqs.txt'),\"wb\")\n",
+    "# pickle_out_all_blocked_timecoords = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_blocked_timecoords.txt'),\"wb\")\n",
     "#dump data\n",
     "pickle.dump(all_seqs, pickle_out_seqs)\n",
-    "pickle.dump(all_blocked_seqs, pickle_out_blocked_seqs)\n",
-    "pickle.dump(all_blocked_timecoords, pickle_out_all_blocked_timecoords)\n",
+    "# pickle.dump(all_blocked_seqs, pickle_out_blocked_seqs)\n",
+    "# pickle.dump(all_blocked_timecoords, pickle_out_all_blocked_timecoords)\n",
     "#close files\n",
     "pickle_out_seqs.close()\n",
-    "pickle_out_blocked_seqs.close()\n",
-    "pickle_out_all_blocked_timecoords.close()"
+    "# pickle_out_blocked_seqs.close()\n",
+    "# pickle_out_all_blocked_timecoords.close()"
    ]
   },
   {
@@ -590,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -644,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +721,7 @@
        " 'V_wavelength']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -831,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
