Reorganizes notebooks on sequence. Runs descriptives on sequence descriptives.

--- a/analysis/run_sequence_analysis.ipynb
+++ b/analysis/run_sequence_analysis.ipynb
@@ -89,20 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "from utils_sequence_parsing import Sequence\n",
     "pickle_in_seqs = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_seqs.txt'),\"r\")\n",
-    "pickle_in_blocked_seqs = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_blocked_seqs.txt'),\"r\")\n",
-    "pickle_in_all_blocked_timecoords = open(os.path.join(BIG_FOLDER,'all_massaged_data\\\\dict_by_sim_by_student_parsed_blocked_timecoords.txt'),\"r\")\n",
     "all_seqs = pickle.load(pickle_in_seqs)\n",
-    "all_blocked_seqs = pickle.load(pickle_in_blocked_seqs)\n",
-    "all_blocked_timecoords = pickle.load(pickle_in_all_blocked_timecoords)\n",
-    "pickle_in_seqs.close()\n",
-    "pickle_in_blocked_seqs.close()\n",
-    "pickle_in_all_blocked_timecoords.close()"
+    "pickle_in_seqs.close()"
    ]
   },
   {
@@ -1428,18 +1423,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
   },
   "toc": {
    "base_numbering": 1,
