Runs descriptives of all sequences

--- a/analysis/data_log_data_to_sequence.ipynb
+++ b/analysis/data_log_data_to_sequence.ipynb
@@ -20,6 +20,7 @@
     "%aimport utils_read_parsing\n",
     "%aimport utils_sequence_parsing\n",
     "from utils_read_parsing import *\n",
+    "from utils_timeline_viz import prep_parsing_data\n",
     "from utils_sequence_parsing import converter, Sequence\n",
     "import os\n",
     "import numpy as np\n",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -142,8 +143,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "utils_timeline_viz.py:96: FutureWarning: read_table is deprecated, use read_csv instead.\n",
-      "  df = pd.read_table(parsing_file, sep='\\t')\n",
       "C:\\Users\\Sarah\\Anaconda2\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -170,7 +169,7 @@
       "Student 24566161 has no state data so using special parser\n",
       "Student 77047160 has no state data so using special parser\n",
       "Student 82788161 has no state data so using special parser\n",
-      "Wall time: 4min 48s\n"
+      "Wall time: 3min 52s\n"
      ]
     }
    ],
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
