Starts running sequence infogain analysis on generalized sequences

--- a/analysis/run_sequence_analysis.ipynb
+++ b/analysis/run_sequence_analysis.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0xcfffba8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0xd835390>"
       ]
      },
      "execution_count": 11,
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
        "147"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,8 +1151,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We transform the sequences by blocking certain actions, removing others, merging some and generalizing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed_seqs = {}\n",
+    "for sim,seqs_by_student in all_seqs.iteritems():\n",
+    "    transformed_seqs[sim] = {}\n",
+    "    for sid,seq in seqs_by_student.iteritems():\n",
+    "        seq.remove_actions('ignore')\n",
+    "        seq.merge_actions(['P','P_notes'])\n",
+    "        seq.block_actions(['P','V_area', 'V_battery', 'V_lightbulb', 'V_separation','V_other','V_width','V_concentration','V_wavelength','V_detector','V_laser','V_ruler'])\n",
+    "        seq.translate_variable_actions()\n",
+    "        seq.check_lengths_seq_timecoords()\n",
+    "        transformed_seqs[sim][sid] = seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1182,15 +1207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "attribute = 'group'\n",
     "level1 = 'LL'\n",
     "level2 = 'LH'\n",
-    "action_seqs = all_blocked_seqs['beers']\n",
-    "time_coords = all_blocked_timecoords['beers']"
+    "action_seqs = transformed_seqs['beers']"
    ]
   },
   {
@@ -1202,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,6 +1447,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   },
   "toc": {
    "base_numbering": 1,
