Adds dist plots of single actions by group

--- a/analysis/descriptives_sequence_analysis.ipynb
+++ b/analysis/descriptives_sequence_analysis.ipynb
@@ -236,7 +236,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C_qual', 'C_quant', 'G_add', 'G_add_fail', 'G_axis_outcome', 'G_axis_quant', 'G_axis_trialnumber', 'G_remove', 'G_scale_inverse', 'G_scale_linear', 'G_scale_log', 'P', 'Switch_quant', 'T_add', 'T_move', 'T_remove', 'V_detector', 'V_laser', 'V_lightbulb', 'V_other', 'V_qual', 'V_quant']\n"
+     ]
+    }
+   ],
    "source": [
     "nb_use = {}\n",
     "for sim in ['beers','capacitor']:\n",
@@ -248,7 +256,8 @@
     "                    print sim, student, seq\n",
     "            nb_use[a].append(seq.seq.count(a))\n",
     "actions = nb_use.keys()\n",
-    "actions.sort()"
+    "actions.sort()\n",
+    "print actions"
    ]
   },
   {
